--- a/default/pacman/pacman.conf
+++ b/default/pacman/pacman.conf
@@ -23,7 +23,9 @@ Architecture = auto
 ParallelDownloads = 5
 Color
 VerbosePkgLists
+TotalDownload
 ILoveCandy
+CheckSpace
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
 #IgnorePkg   =
@@ -35,8 +37,6 @@ ILoveCandy
 # Misc options
 #UseSyslog
 #UseDelta
-CheckSpace
-#VerbosePkgLists
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
@@ -97,7 +97,7 @@ Include = /etc/pacman.d/mirrorlist
 #Include = /etc/pacman.d/mirrorlist
 
 [multilib]
-#SigLevel = PackageRequired
+SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
